fix: overflowing profile pictures
co-authored by: Akansha Sakhre

--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -1,26 +1,26 @@
 .profile {
     background-color: #133667 !important;
     text-align: center;
-    height: 320px;
     margin-bottom: 50px;
+    padding: 1rem 0;
+
     h1 {
         font-size: 50px;
         font-weight: 700;
         color: white;
     }
-    
+
     img {
         border-radius: 50%;
-        max-width: 100%;
-        max-height: 100%;
+        max-width: 220px;
+        max-height: 220px;
         margin-left: auto;
         margin-right: auto;
-        display: inline;        
+        display: inline;
         padding: 20px;
     }
-    
+
     .profile-picture {
         margin-bottom: 30px;
-        height: 200px;
     }
 }
